tests/negative/list_cstyle_desc_oob_index_assign.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for (i = 2; i > 0; i = i - 1) {
    lst.push(i + 10)
  }
  lst[2] = 99
  return 0
}
